# LLM2

./: .gitattributes  .gitignore  Dockerfile  README.md  REPORT.md  colab_train.ipynb  experiments.md  fix_imports.py  generate.py  pyproject.toml  requirements.txt  test_sampler.py  train.py
adr/: 0001-configuration-management.md  0002-dataset-storage-backend.md  0003-core-primitives.md
axiom_model/: README.md  requirements.txt  search_hf.py  sft_best.pt  test_all_datasets.py  test_api_docs.py  test_c4_hang.py  test_dataset.py  test_rp.py  test_rp2.py  test_tik.py  test_tik2.py
config/: __init__.py  enums.py  gpt_config.py
configs/: base.yaml  baseline_25m.yaml  smoke.yaml
core/: attention.py  block.py  embeddings.py  ffn.py  model.py  rms_norm.py
data/: __init__.py  dataset.py  datasets.yaml  tokenizer.py  weights.yaml
docs/: COLAB_GUIDE.md
engine/: bootstrap.py  data_manager.py  device_manager.py  experiment_manager.py  scheduler.py  trainer.py  training_state.py  validation_manager.py
experiments/: 01_layernorm.py  02_attention_walkthrough.py  03_overfit_single_batch.py  04_integration_test.py
models/: __init__.py  attention.py  block.py  interfaces.py  model.py
scripts/: benchmark.py  build_vector_db.py  chat.py  chat_rag.py  download_dataset.py  evaluate.py  generate.py  prepare_dataset.py  prepare_fineweb_edu.py  prepare_sft_dataset.py  train.py  train_sft.py
tests/: helpers.py  test_attention.py  test_checkpoint_manager.py  test_generate.py  test_model.py  test_primitives.py  test_trainer_integration.py  test_validation_manager.py
(+61 files in other folders)
