[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "A 10M parameter GPT-style LLM built from scratch"
authors = [
    {name = "Harsh"}
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "tiktoken>=0.6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "wandb>=0.16.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # flake8 errors, pyflakes, isort

[tool.mypy]
strict = true
ignore_missing_imports = true
